src/test/deca/syntax/invalid/testExprIf3.deca
// test invalid if statements
// Result : Error
// no statement to check
{
    if (){
        printx("Ok");
    }
}
